--- a/styles.css
+++ b/styles.css
@@ -44,10 +44,20 @@ body {
 }
 
 .large-text {
-    font-size: 8.5px; /* Уменьшите размер шрифта по вашему усмотрению */
+    font-size: 11px; /* Уменьшите размер шрифта по вашему усмотрению */
     line-height: 1.2; /* Опционально, для улучшения читабельности */
 }
 
 .hide-cursor #cursor {
     display: none;
+}
+
+@media (max-width: 668px) { /* Примерный порог ширины для мобильных устройств */
+    .large-text {
+        font-size: 9px; /* Уменьшите размер шрифта по вашему усмотрению */
+        
+    }
+    body {
+        font-size: 14px;
+    }
 }
