--- a/styles.css
+++ b/styles.css
@@ -54,9 +54,11 @@ body {
 
 @media (max-width: 668px) { /* Примерный порог ширины для мобильных устройств */
     .large-text {
-        font-size: 2px; /* Уменьшите размер шрифта по вашему усмотрению */
+        font-size: 7px; /* Уменьшите размер шрифта по вашему усмотрению */
         
     }
+}
+@media (max-width: 668px) { /* Примерный порог ширины для мобильных устройств */
     body {
         font-size: 14px;
     }
